increased clock speed to 48 MHz and made other Beato changes from appendix

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@
 # do ignore useless settings file
 .vscode/settings.json
 #don't ignore the files that change the device config
-!RTE/Device/MSP432P4111/startup_msp432p4111_uvision.s
 !RTE/Device/MSP432P4111/system_msp432p4111.c
+# !RTE/Device/MSP432P4111/startup_msp432p4111_uvision.s
