--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 !.vscode/*
 # do ignore useless settings file
 .vscode/settings.json
+.vscode/c_cpp_properties.json
 #don't ignore the files that change the device config
 !RTE/Device/MSP432P4111/system_msp432p4111.c
 !RTE/Device/MSP432P4111/startup_msp432p4111_uvision.s
