--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,6 @@
 !RTE/Device/MSP432P4111/system_msp432p4111.c
 !RTE/Device/MSP432P4111/startup_msp432p4111_uvision.s
 
+!RTE/Device/MSP432P401R/system_msp432p401r.c
+!RTE/Device/MSP432P401R/startup_msp432p401r_uvision.s
 
