--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,8 +4,7 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
-		"ms-vscode.cpptools",
-		"Gruntfuggly.todo-tree"
+		"ms-vscode.cpptools"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
